# mpgrab

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  Makefile  README.md  build.rs  eslint.config.js  mpgrab.rc  package-lock.json  package.json
.github/workflows/: ci.yml  release-please.yml  release.yaml
.husky/: commit-msg
src/: App.tsx  app.rs  main.rs  paths.rs  ui.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: download.rs  lib.rs  main.rs  paths.rs
src/components/ui/: button.tsx
